feat：项目名称变更

--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.cn</groupId>
-    <artifactId>spark-practice</artifactId>
+    <artifactId>study-practice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spark-practice</name>
-    <description>spark-practice</description>
+    <name>study-practice</name>
+    <description>study-practice</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
