--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>study-practice</description>
     <properties>
         <java.version>1.8</java.version>
+        <spark.version>3.3.0</spark.version>
     </properties>
     <dependencies>
         <dependency>
@@ -48,29 +49,28 @@
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.12</artifactId>
-            <version>3.3.0</version>
+            <version>${spark.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-hive_2.12</artifactId>
-            <version>3.1.2</version>
+            <version>${spark.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.12</artifactId>
-            <version>3.3.0</version>
+            <version>${spark.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-yarn_2.12</artifactId>
-            <version>3.1.2</version>
+            <version>${spark.version}</version>
         </dependency>
 
         <!-- Yaml to Json -->
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>1.30</version>
         </dependency>
 
         <!-- fastJson -->
@@ -79,6 +79,7 @@
             <artifactId>fastjson</artifactId>
             <version>2.0.20</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
