--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,9 @@
 server:
   port: 8088
+
+proxy:
+  enabled: true
+  show-log: true
+  proxy-attributes:
+    - servletUrl: /baidu/*
+      targetUrl: https://baidu.com
